--- a/simple/styles/layouts.css
+++ b/simple/styles/layouts.css
@@ -7,7 +7,7 @@
   }
 
   h2 {
-    @apply text-4xl leading-20 font-bold text-dark-100;
+    @apply text-4xl leading-20 font-bold text-blue-600;
   }
 
   h3 {
